--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<script type="text/javascript" src="games/minesweeper/minesweeper.js"></script>
 	<script type="text/javascript" src="taskbar.js"></script>
 	<script type="text/javascript" src="winXP.js" defer></script>
+
+  <link rel="icon" type="image/x-icon" href="images/favicon2.ico">
 </head>
 <body>
 </body>
