--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang=en>
 <head>
 	<title>WinXP</title>
 	<link rel="stylesheet" type="text/css" href="games/tetris/tetris.css">
 	<link rel="stylesheet" type="text/css" href="games/minesweeper/minesweeper.css">
+	<link rel="stylesheet" type="text/css" href="games/worms/worms.css">
 	<link rel="stylesheet" type="text/css" href="winXP.css">
 
 	<script type="text/javascript" src="icon.js"></script>
 	<script type="text/javascript" src="window.js"></script>
+	<script type="text/javascript" src="games/worms/worms.js"></script>
 	<script type="text/javascript" src="games/tetris/tetris.js"></script>
 	<script type="text/javascript" src="games/minesweeper/minesweeper.js"></script>
 	<script type="text/javascript" src="taskbar.js"></script>
