--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang=en>
 <head>
 	<title>WinXP</title>
+	<link rel="stylesheet" type="text/css" href="winXP.css">
 	<link rel="stylesheet" type="text/css" href="games/tetris/tetris.css">
 	<link rel="stylesheet" type="text/css" href="games/minesweeper/minesweeper.css">
 	<link rel="stylesheet" type="text/css" href="games/worms/worms.css">
-	<link rel="stylesheet" type="text/css" href="winXP.css">
 
+	<script type="text/javascript" src="loader.js" defer></script>
 	<script type="text/javascript" src="icon.js"></script>
 	<script type="text/javascript" src="window.js"></script>
 	<script type="text/javascript" src="games/worms/worms.js"></script>
